--- a/angular/package.json
+++ b/angular/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@stomp/stompjs": "^7.0.0",
     "moment": "^2.29.4",
     "ngx-toastr": "15.2.2",
     "rxjs": "~7.5.0",
